name:                PoE-Recipe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/VitorCBSB/PoE-Recipe#readme
license:             BSD3
license-file:        LICENSE
author:              Vitor Coimbra
maintainer:          vitorcoliveira91@gmail.com
copyright:           Vitor Coimbra
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable PoE-Recipe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , lens
                     , wreq
                     , text
                     , bytestring
                     , lens-aeson
                     , parsec
